{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 1017,
  "lineage": "256c711b-08c4-f9ca-8050-3c68cf099337",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250709",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/zones/us-central1-a/disks/dr-spring-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2025-07-20T19:42:02.689-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/direct-tribute-463400-f2/zones/us-central1-a/instances/dr-spring-vm",
            "instance_id": "247192198633756181",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "startup-script": "#!/bin/bash\r\napt-get update\r\napt-get install -y docker.io\r\n\r\necho \"rhdwn9953!\" | docker login -u \"choiyeram\" --password-stdin\r\ndocker pull choiyeram/boot:latest\r\ndocker run -d -p 80:8080 choiyeram/boot:latest\r\n"
            },
            "metadata_fingerprint": "_JE_tTFQn80=",
            "name": "dr-spring-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.61.127.192",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/global/networks/dr-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/regions/us-central1/subnetworks/dr-subnet",
                "subnetwork_project": "direct-tribute-463400-f2"
              }
            ],
            "project": "direct-tribute-463400-f2",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/zones/us-central1-a/instances/dr-spring-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-ssh"
            ],
            "tags_fingerprint": "LfyOV3jN6cE=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-20T19:41:45.829-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/direct-tribute-463400-f2/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/global/networks/dr-vpc",
            "priority": 1000,
            "project": "direct-tribute-463400-f2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-20T19:41:45.869-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/direct-tribute-463400-f2/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/global/networks/dr-vpc",
            "priority": 1000,
            "project": "direct-tribute-463400-f2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.163.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-07-20T19:41:51.593-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/direct-tribute-463400-f2/global/addresses/sql-private-range",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "sql-private-range",
            "network": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/global/networks/dr-vpc",
            "prefix_length": 16,
            "project": "direct-tribute-463400-f2",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/global/addresses/sql-private-range",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/direct-tribute-463400-f2/global/networks/dr-vpc",
            "mtu": 0,
            "name": "dr-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "887059265365861600",
            "numeric_id": "887059265365861600",
            "project": "direct-tribute-463400-f2",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/global/networks/dr-vpc"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "allow_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "as_paths": [],
            "creation_timestamp": "2025-07-20T19:41:45.738-07:00",
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/direct-tribute-463400-f2/global/routes/dr-vpc-allow-internet",
            "name": "dr-vpc-allow-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/global/networks/dr-vpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/global/gateways/default-internet-gateway",
            "next_hop_hub": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_inter_region_cost": "",
            "next_hop_ip": "",
            "next_hop_med": "",
            "next_hop_network": "",
            "next_hop_origin": "",
            "next_hop_peering": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "direct-tribute-463400-f2",
            "route_status": "",
            "route_type": "",
            "self_link": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/global/routes/dr-vpc-allow-internet",
            "tags": [],
            "timeouts": null,
            "warnings": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-20T19:41:58.418-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/direct-tribute-463400-f2/regions/us-central1/routers/dr-vpc-router",
            "name": "dr-vpc-router",
            "network": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/global/networks/dr-vpc",
            "project": "direct-tribute-463400-f2",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/regions/us-central1/routers/dr-vpc-router"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "direct-tribute-463400-f2/us-central1/dr-vpc-router/dr-vpc-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "dr-vpc-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "direct-tribute-463400-f2",
            "region": "us-central1",
            "router": "dr-vpc-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-20T19:41:46.526-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.2.1",
            "id": "projects/direct-tribute-463400-f2/regions/us-central1/subnetworks/dr-vpc-private-db",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "dr-vpc-private-db",
            "network": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/global/networks/dr-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "direct-tribute-463400-f2",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/regions/us-central1/subnetworks/dr-vpc-private-db",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 141116874473608709
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_kuber",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-20T19:41:48.034-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.3.1",
            "id": "projects/direct-tribute-463400-f2/regions/us-central1/subnetworks/dr-vpc-private-b",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "dr-vpc-private-b",
            "network": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/global/networks/dr-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "direct-tribute-463400-f2",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/regions/us-central1/subnetworks/dr-vpc-private-b",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 1470248947226252803
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-20T19:41:46.527-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.0.1",
            "id": "projects/direct-tribute-463400-f2/regions/us-central1/subnetworks/dr-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "dr-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/global/networks/dr-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "direct-tribute-463400-f2",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.40.0.0/14",
                "range_name": "gke-lovebridge-dr-cluster-pods-12cf7133",
                "reserved_internal_range": "https://networkconnectivity.googleapis.com/v1/projects/direct-tribute-463400-f2/locations/global/internalRanges/gke-lovebridge-dr-cluster-pods-12cf7133"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/regions/us-central1/subnetworks/dr-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 461076029466744325
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.static_ip",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "gke_ingress_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.136.42.42",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-07-20T19:41:46.418-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/direct-tribute-463400-f2/regions/us-central1/addresses/gke-ingress-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "gke-ingress-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "direct-tribute-463400-f2",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/direct-tribute-463400-f2/regions/us-central1/addresses/gke-ingress-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    }
  ]
}